--- a/package.json
+++ b/package.json
@@ -33,8 +33,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "dotenv": "^8.2.0",
-    "nodemon": "^2.0.2"
-  }
+  "devDependencies": {}
 }
